fixes some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ ul, ol, p {
     color: #FFFFFF;
     background-color: #dfb45c; 
     text-align: center;
-    margin: 0 auto;
+    margin: 2em auto 0 auto;
     letter-spacing: 1px;
     font-weight: thin;
     max-width: 25em;
@@ -269,6 +269,18 @@ ul, ol, p {
     letter-spacing: 1px;
 }
 
+.section-header-footer {
+    border-bottom: 2px solid #dfb45c;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: lighter;
+    padding: 0 2em 2em 2em;
+    width: 50%;
+    margin: 1rem auto 1rem auto;
+    font-size: 1.125rem;
+    letter-spacing: 1px;
+}
+
 .exp-box {
     border: 1px solid #E6E6E6;
     float: left;
@@ -283,7 +295,8 @@ ul, ol, p {
 }
 
 .exp-box a figcaption {
-    padding: 1rem;
+    padding-top: 2rem;
+    height: 12rem;
 }
 
 .exp-box:hover {
@@ -378,7 +391,7 @@ ul, ol, p {
 @media only screen and (min-width: 38em) {
 
     .body-ctr {
-    padding: 0 20%;
+    padding: 0 10%;
     }
     
     .section-header {
@@ -461,6 +474,10 @@ ul, ol, p {
 
 
 @media only screen and (min-width: 60em) {
+    
+       .body-ctr {
+        padding: 0 20%;
+    }
     
     .name {
     font-size: 8rem;
